# dash-fagfredag

./: .gitignore  README.md  pyproject.toml  server.py
.devcontainer/: devcontainer.json
assets/: style.css
